--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@ body {
 
 .button-container {
   position: relative; /* Ensure the container is positioned relative to its parent */
-  top: -69px; /* Adjust the top position as needed to move the buttons higher up */
+  top: -59px; /* Adjust the top position as needed to move the buttons higher up */
 }
     .button {
       display: inline-block;
@@ -341,7 +341,7 @@ body {
 
     .button img {
       display: block;
-      width: 42px; /* Adjust the size as needed */
+      width: 40px; /* Adjust the size as needed */
       height: auto;
     }
 
@@ -370,10 +370,10 @@ body {
     <a class="button" onclick="blank('https://sussygamedeveloper.github.io/FNAF1/');">
       <img src="https://th.bing.com/th/id/OIP.YKYIiqVU1Tp17waNwI8uVAAAAA?rs=1&pid=ImgDetMain" alt="FNAF 1">
     </a>
-    <a class="button" onclick="blank('https://gamedump.github.io/slope/');">
+    <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/slope/index.html');">
       <img src="https://th.bing.com/th/id/R.8612001a80ea5f6720b1a1c11687af88?rik=WyQ6HIc0e6vkSg&pid=ImgRaw&r=0" alt="SLOPE 1">
     </a>
-    <a class="button" onclick="blank('https://sevenworksdev.github.io/SM64-JS/');">
+    <a class="button" onclick="blank('https://newbody.vercel.app/Mario_64-OFFLINE.html');">
       <img src="https://th.bing.com/th/id/OIP.BvriPJra1wbseYngRo0dpwAAAA?rs=1&pid=ImgDetMain" alt="SM64">
     </a>
     <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/retro-bowl/index.html');">
@@ -388,10 +388,10 @@ body {
 <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-bkg%2Cfklgdktahqtwfd.oe-b12-YinNKDfuakRgIjQVg%60f%2Cmr4');">
       <img src="https://th.bing.com/th/id/OIP.uN2kUJQ7lL0adPDQGxlf-QAAAA?w=420&h=420&rs=1&pid=ImgDetMain" alt="fnaf movie">
     </a>
-   <a class="button" onclick="blank('https://kdata1.com/2022/11/bad-ice-cream/');">
+   <a class="button" onclick="blank('https://tylerpalko.github.io/gamehub/badicecream/');">
       <img src="https://th.bing.com/th/id/OIP.V199bz0Tdl350wCW2-y1ywAAAA?w=256&h=256&rs=1&pid=ImgDetMain%22%20alt=%22bad%20icecream" alt="FNAF 1">
     </a>
-   <a class="button" onclick="blank('https://ubg365.github.io/monkey-mart/play.html');">
+   <a class="button" onclick="blank('https://gnhustgames.github.io/monkeymart/');">
       <img src="https://th.bing.com/th/id/OIP.R6QV49uV3NDGj2yeVJwXGAAAAA?rs=1&pid=ImgDetMain" alt="basket bros">
     </a>
    <a class="button" onclick="blank('https://projects.sappharad.com/s3air_ios/20240202_beta/sonic3air_web.html');">
@@ -399,6 +399,9 @@ body {
     </a>
  <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/jetpack-joyride/index.html');">
       <img src="https://somuchmath.global.ssl.fastly.net/projects/jetpack-joyride/splash.jpg" alt="sonic 3 air">
+    </a>
+ <a class="button" onclick="blank('https://shadowgmes.github.io/gfiles/ballistic-chickens/');">
+      <img src="https://somuchmath.global.ssl.fastly.net/projects/ballistic-chickens/logo.png" alt="sonic 3 air">
     </a>
    <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-wuw%2Cgmoelg.ao%2Cui%2F');">
       <img src="https://www.shareicon.net/data/512x512/2016/07/10/119930_google_512x512.png" alt="FNAF 1">
@@ -416,13 +419,13 @@ body {
     <a class="button" onclick="blank('https://sonic-mania-web2.vercel.app/RSDKv5.html');">
       <img src="https://th.bing.com/th/id/R.2b10f121743af7b35a09743345649982?rik=8rgBTShBw3J2Mw&pid=ImgRaw&r=0" alt="mania">
     </a>
-    <a class="button" onclick="blank('https://files.twoplayergames.org/files/games/other/Basket_Random/index.html?key=y8&value=default');">
+    <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-fklgs%2Ctuorlcygreaoeq.mre%2Fdineq%2Feaoeq%2Fmtjep%2F%40aqkgt%5DRcnfoo%2Fknfez.jtol');">
       <img src="https://th.bing.com/th/id/R.3cc7b68d78f953133c4eae9a97b874dd?rik=Qu5mbezd5qr32Q&pid=ImgRaw&r=0" alt="basket">
     </a>
     <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-sklgnvsraaeoapile%2Ccmm-');">
       <img src="https://th.bing.com/th/id/OIP.yp_k2YKOplhIXyEvRJEOJwHaHa?rs=1&pid=ImgDetMain" alt="doom">
     </a>
-    <a class="button" onclick="blank('https://uploads.ungrounded.net/alternate/1528000/1528775_alternate_113347_r114.zip/?NewgroundsAPI_PublisherID=1&NewgroundsAPI_SandboxID=664bbe2bc5fd0&NewgroundsAPI_SessionID=&NewgroundsAPI_UserName=%26lt%3Bdeleted%26gt%3B&NewgroundsAPI_UserID=0&ng_username=%26lt%3Bdeleted%26gt%3B');">
+    <a class="button" onclick="blank('https://html-classic.itch.zone/html/2876359-985120/index.html');">
       <img src="https://th.bing.com/th/id/R.7936acf97d736dbfd5613c09a3f6acfa?rik=KxpihNWAM93B5w&pid=ImgRaw&r=0" alt="fnf">
     </a>
     <a class="button" onclick="blank('https://sans.nyaasu.top/');">
@@ -435,7 +438,7 @@ body {
       <img src="https://th.bing.com/th/id/R.281a0334856a6d8e79f15aefa0ef81cf?rik=eigkhhOk15rklw&pid=ImgRaw&r=0" alt="run 3 ">
     </a>
 <a class="button" onclick="blank('https://www.hoodamath.com/mobile/games/duck-life-4/game.html?nocheckorient=1');">
-      <img src="https://img.poki.com/cdn-cgi/image/width=600,height=600,fit=cover,g=0.5x0.5,f=auto/d0048d89-e4fa-4adb-9c77-adc51e4e1c6b.png" alt="run 3 ">
+      <img src="https://th.bing.com/th/id/OIP.ZlnFIVSyplxiE2e6cLTqrwHaHa?rs=1&pid=ImgDetMain" alt="run 3 ">
     </a>
 <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/cookie-clicker/');">
       <img src="https://th.bing.com/th/id/R.98626247c0801762e4eb11dc481b23b4?rik=GUiQy2FMBKcPHA&pid=ImgRaw&r=0" alt="cookie clicker ">
@@ -446,8 +449,11 @@ body {
 <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/basketbros-io/index.html');">
       <img src="https://somuchmath.global.ssl.fastly.net/projects/basketbros-io/thumb.jpg" alt="bad icecream">
     </a>
-<a class="button" onclick="blank('https://lunarsync.smartfoloo.space/assets/fonts/geometry-dash/');">
+<a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-lwncrqylc%2Csoaptdonom.qpccg%2Fcsqevs-fmnvs-ggooevr%7B-faqh-');">
       <img src="https://th.bing.com/th/id/R.2a527448abbb085f6c89793cfb5f65f5?rik=A7ss82CSOJPrkg&riu=http%3a%2f%2fvignette2.wikia.nocookie.net%2fgeometry-dash%2fimages%2f9%2f90%2fGeometryDash.png%2frevision%2flatest%3fcb%3d20160224042843&ehk=Hvk2rFdCmF08iQinZYieMsLbvo4NDNdKYic8xB6GqZE%3d&risl=&pid=ImgRaw&r=0" alt="bad icecream">
+    </a>
+<a class="button" onclick="blank('https://motox3monline.github.io/file/');">
+      <img src="https://somuchmath.global.ssl.fastly.net/projects/motox3m/splash.jpg" alt="bad icecream">
     </a>
 <a class="button" onclick="blank('https://levelsharesquare.com/html5/yoshisfabricationstation/');">
       <img src="https://somuchmath.global.ssl.fastly.net/projects/yoshifabrication/icons/icon-512.png">
