--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ body {
       <img src="https://th.bing.com/th/id/R.281a0334856a6d8e79f15aefa0ef81cf?rik=eigkhhOk15rklw&pid=ImgRaw&r=0" alt="run 3 ">
     </a>
 <a class="button" onclick="blank('https://www.hoodamath.com/mobile/games/duck-life-4/game.html?nocheckorient=1');">
-      <img src="https://th.bing.com/th/id/OIP.ZlnFIVSyplxiE2e6cLTqrwHaHa?rs=1&pid=ImgDetMain" alt="run 3 ">
+      <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/bc/3e/d1/bc3ed129-14a6-cd24-d547-b7119530ad08/AppIcon-0-0-1x_U007emarketing-0-7-0-85-220.png/512x512bb.jpg" alt="run 3 ">
     </a>
 <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/cookie-clicker/');">
       <img src="https://th.bing.com/th/id/R.98626247c0801762e4eb11dc481b23b4?rik=GUiQy2FMBKcPHA&pid=ImgRaw&r=0" alt="cookie clicker ">
