--- a/index.html
+++ b/index.html
@@ -1,3 +1,7 @@
+<!-- Start of CuterCounter Code -->
+<a href="https://www.cutercounter.com/" target="_blank"><img src="https://www.cutercounter.com/hits.php?id=hxpoaax&nd=5&style=2" border="0" alt="hit counter"></a>
+<!-- End of CuterCounter Code -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -203,6 +207,9 @@
 
 
 
+
+
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -210,26 +217,26 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quantum</title>
   <style>
-body {
-  font-family: Arial, sans-serif;
-  font-size: 16px;
-  text-align: center;
-  overflow: hidden;
-  margin: 0;
-  padding: 0;
-  background: linear-gradient(360deg, #555555, #1e1e1e);
-  background-repeat: repeat;
-  color: #555;
-  font-weight: bold;
-  min-height: 100vh;
-}
-    .header {
-      padding: 20px 10px; /* Adjust top padding */
+    body {
+      font-family: Arial, sans-serif;
+      font-size: 16px;
+      text-align: center;
+      overflow: hidden;
+      margin: 0;
+      padding: 0;
+      background: linear-gradient(360deg, #555555, #1e1e1e);
+      background-repeat: repeat;
       color: #555;
-      font-size: 24px; /* Adjust font size */
       font-weight: bold;
-      opacity: 0; /* Initially hidden */
-      animation: fadeInHeader 1s forwards; /* Fade-in animation */
+      min-height: 100vh;
+    }
+    .header {
+      padding: 20px 10px;
+      color: #555;
+      font-size: 24px;
+      font-weight: bold;
+      opacity: 0;
+      animation: fadeInHeader 1s forwards;
     }
 
     @keyframes fadeInHeader {
@@ -255,11 +262,6 @@ body {
       height: 100%;
       position: absolute;
     }
-
-    .progress-box {
-      display: none; /* Hide progress box */
-    }
-
     .vault-wheel {
       position: absolute;
       top: 50%;
@@ -282,7 +284,6 @@ body {
       }
     }
 
-    /* Styling for the search box */
     form[name="cse"] {
       position: absolute;
       top: 90px;
@@ -308,7 +309,7 @@ body {
       width: 250px;
       padding: 10px;
       border: none;
-      border-radius: 25px; /* Rounded corners */
+      border-radius: 25px;
       background-color: #333;
       color: white;
     }
@@ -318,7 +319,7 @@ body {
       color: white;
       border: none;
       padding: 10px 20px;
-      border-radius: 25px; /* Rounded corners */
+      border-radius: 25px;
       cursor: pointer;
     }
 
@@ -326,14 +327,14 @@ body {
       background-color: #0056b3;
     }
 
-.button-container {
-  position: relative; /* Ensure the container is positioned relative to its parent */
-  top: -59px; /* Adjust the top position as needed to move the buttons higher up */
-}
+    .button-container {
+      position: relative;
+      top: -59px;
+    }
     .button {
       display: inline-block;
       overflow: hidden;
-      border-radius: 10px; /* Adjust the curve as needed */
+      border-radius: 10px;
       cursor: pointer;
       transition: all 0.3s ease;
       margin: 10px;
@@ -341,7 +342,7 @@ body {
 
     .button img {
       display: block;
-      width: 40px; /* Adjust the size as needed */
+      width: 36px;
       height: auto;
     }
 
@@ -353,7 +354,6 @@ body {
 <body>
   <div class="header" style="padding-top: 30px;">Quantum</div>
   
-  <!-- Modified search box with JavaScript -->
   <form name="cse" id="searchbox_demo" onsubmit="return submitUrl()">
     <input type="text" id="urlInput" placeholder="" style="border-radius: 25px; padding: 10px;" />
     <input type="submit" value="Go" style="border-radius: 25px; padding: 10px 20px; background-color: #007bff; color: white; border: none; cursor: pointer;" />
@@ -362,62 +362,74 @@ body {
   <div class="vault-container">
     <div class="vault-background"></div>
     <div class="vault-wheel"></div>
-    <div class="progress-box">Progress: </div>
   </div>
 
   <!-- First Row of Buttons -->
   <div class="button-container">
     <a class="button" onclick="blank('https://sussygamedeveloper.github.io/FNAF1/');">
-      <img src="https://th.bing.com/th/id/OIP.YKYIiqVU1Tp17waNwI8uVAAAAA?rs=1&pid=ImgDetMain" alt="FNAF 1">
+      <img src="https://th.bing.com/th/id/OIP.YKYIiqVU1Tp17waNwI8uVAAAAA?rs=1&pid=ImgDetMain" alt="fnaf">
     </a>
+    <a class="button" onclick="blank('https://xn--l8jyc6av9xzc.jodymaroni.com/compiled/fnaf2/');">
+      <img src="https://i.imgur.com/dmcIh5N.jpg" alt="fnaf2">
+    </a>
+    <a class="button" 
     <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/slope/index.html');">
-      <img src="https://th.bing.com/th/id/R.8612001a80ea5f6720b1a1c11687af88?rik=WyQ6HIc0e6vkSg&pid=ImgRaw&r=0" alt="SLOPE 1">
+      <img src="https://th.bing.com/th/id/R.8612001a80ea5f6720b1a1c11687af88?rik=WyQ6HIc0e6vkSg&pid=ImgRaw&r=0" alt="slope">
     </a>
     <a class="button" onclick="blank('https://newbody.vercel.app/Mario_64-OFFLINE.html');">
-      <img src="https://th.bing.com/th/id/OIP.BvriPJra1wbseYngRo0dpwAAAA?rs=1&pid=ImgDetMain" alt="SM64">
+      <img src="https://th.bing.com/th/id/OIP.BvriPJra1wbseYngRo0dpwAAAA?rs=1&pid=ImgDetMain" alt="sm64">
     </a>
     <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/retro-bowl/index.html');">
-      <img src="https://th.bing.com/th/id/R.9d0bdbd48b96dc29e6dc015082209462?rik=XlC3BCr1QNkK4w&pid=ImgRaw&r=0" alt="RETRO BOWL">
+      <img src="https://th.bing.com/th/id/R.9d0bdbd48b96dc29e6dc015082209462?rik=XlC3BCr1QNkK4w&pid=ImgRaw&r=0" alt="retro">
     </a>
     <a class="button" onclick="blank('https://ovo-alpha.vercel.app/versions/1.4.4b/index.html');">
       <img src="https://arjun99ab.github.io/ovo/assets/img/home-icon.png" alt="ovo">
     </a>
-<a class="button" onclick="blank('https://a6936-19375562.cluster7.canvas-user-content.com/courses/6936~1010708/files/6936~19375562/course%20files/vfcd/index.html?context_id=6936~1010708context_type=Course&download=1&id=69360000019375562&inline=1');">
-      <img src="https://th.bing.com/th/id/OIP.wTyDM9r3GsSjywIfZj2EKgAAAA?w=300&h=300&rs=1&pid=ImgDetMain" alt="FNAF movie">
+    <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/btts/index.html');">
+      <img src="https://i.imgur.com/WUKTKmw.jpeg" alt="btts">
     </a>
-<a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-bkg%2Cfklgdktahqtwfd.oe-b12-YinNKDfuakRgIjQVg%60f%2Cmr4');">
+    <a class="button" onclick="blank('https://a6936-19375562.cluster7.canvas-user-content.com/courses/6936~1010708/files/6936~19375562/course%20files/vfcd/index.html?context_id=6936~1010708context_type=Course&download=1&id=69360000019375562&inline=1');">
+      <img src="https://th.bing.com/th/id/OIP.wTyDM9r3GsSjywIfZj2EKgAAAA?w=300&h=300&rs=1&pid=ImgDetMain" alt="subway">
+    </a>
+    <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-bkg%2Cfklgdktahqtwfd.oe-b12-YinNKDfuakRgIjQVg%60f%2Cmr4');">
       <img src="https://th.bing.com/th/id/OIP.uN2kUJQ7lL0adPDQGxlf-QAAAA?w=420&h=420&rs=1&pid=ImgDetMain" alt="fnaf movie">
     </a>
-   <a class="button" onclick="blank('https://tylerpalko.github.io/gamehub/badicecream/');">
-      <img src="https://th.bing.com/th/id/OIP.V199bz0Tdl350wCW2-y1ywAAAA?w=256&h=256&rs=1&pid=ImgDetMain%22%20alt=%22bad%20icecream" alt="FNAF 1">
+    <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/bad-ice-cream/index.html');">
+      <img src="https://i.imgur.com/j2f0ABZ.png">
     </a>
-   <a class="button" onclick="blank('https://gnhustgames.github.io/monkeymart/');">
-      <img src="https://th.bing.com/th/id/OIP.R6QV49uV3NDGj2yeVJwXGAAAAA?rs=1&pid=ImgDetMain" alt="basket bros">
+    <a class="button" onclick="blank('https://xn--l8jyc6av9xzc.jodymaroni.com/compiled/monkey-mart/');">
+      <img src="https://th.bing.com/th/id/OIP.R6QV49uV3NDGj2yeVJwXGAAAAA?rs=1&pid=ImgDetMain" alt="monke">
     </a>
-   <a class="button" onclick="blank('https://projects.sappharad.com/s3air_ios/20240202_beta/sonic3air_web.html');">
-      <img src="https://m.gjcdn.net/game-screenshot/400/16208740-hcqnh2rx-v4.jpg" alt="sonic 3 air">
+    <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/fnaw/index.html');">
+      <img src="https://somuchmath.global.ssl.fastly.net/projects/fnaw/splash.png" alt="game9">
     </a>
- <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/jetpack-joyride/index.html');">
-      <img src="https://somuchmath.global.ssl.fastly.net/projects/jetpack-joyride/splash.jpg" alt="sonic 3 air">
+    <a class="button" onclick="blank('https://sonic-mania-web2.vercel.app/RSDKv5.html');">
+      <img src="https://th.bing.com/th/id/R.2b10f121743af7b35a09743345649982?rik=8rgBTShBw3J2Mw&pid=ImgRaw&r=" alt="sonic3">
+    </a>
+    <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/jetpack-joyride/splash.jpg');">
+      <img src="https://somuchmath.global.ssl.fastly.net/projects/jetpack-joyride/splash.jpg" alt="jetpack">
     </a>
  <a class="button" onclick="blank('https://shadowgmes.github.io/gfiles/ballistic-chickens/');">
-      <img src="https://somuchmath.global.ssl.fastly.net/projects/ballistic-chickens/logo.png" alt="sonic 3 air">
+      <img src="https://somuchmath.global.ssl.fastly.net/projects/ballistic-chickens/logo.png" alt="chicken">
     </a>
    <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-wuw%2Cgmoelg.ao%2Cui%2F');">
-      <img src="https://www.shareicon.net/data/512x512/2016/07/10/119930_google_512x512.png" alt="FNAF 1">
+      <img src="https://www.shareicon.net/data/512x512/2016/07/10/119930_google_512x512.png" alt="google">
     </a>
 <a class="button" onclick="blank('https://levelsharesquare.com/html5/supermarioconstruct/');">
-      <img src="https://somuchmath.global.ssl.fastly.net/projects/supermarioconstruct/media/icons/icon-128.png" alt="FNAF 1">
+      <img src="https://somuchmath.global.ssl.fastly.net/projects/supermarioconstruct/media/icons/icon-128.png" alt="smc">
+    </a>
+<a class="button" onclick="blank('https://html-classic.itch.zone/html/2876359-985120/index.html');">
+      <img src="https://th.bing.com/th/id/R.7936acf97d736dbfd5613c09a3f6acfa?rik=KxpihNWAM93B5w&pid=ImgRaw&r=0" alt="fnf">
     </a>
   </div>
 
   <!-- Second Row of Buttons -->
   <div class="button-container">
     <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-bkg%2Cfklgdktahqtwfd.oe-b13-XIhRsuoERFmZSldWgAf%2Cmr4');">
-      <img src="https://images2.fanpop.com/images/photos/7000000/Spongebob-Icon-spongebob-squarepants-7039739-100-100.jpg" alt="Sponge">
+      <img src="https://images2.fanpop.com/images/photos/7000000/Spongebob-Icon-spongebob-squarepants-7039739-100-100.jpg" alt="sponge">
     </a>
-    <a class="button" onclick="blank('https://sonic-mania-web2.vercel.app/RSDKv5.html');">
-      <img src="https://th.bing.com/th/id/R.2b10f121743af7b35a09743345649982?rik=8rgBTShBw3J2Mw&pid=ImgRaw&r=0" alt="mania">
+    <a class="button" onclick="blank('https://projects.sappharad.com/s3air_ios/20240202_beta/sonic3air_web.html');">
+      <img src="https://m.gjcdn.net/game-screenshot/400/16208740-hcqnh2rx-v4.jpg" alt="mania">
     </a>
     <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-fklgs%2Ctuorlcygreaoeq.mre%2Fdineq%2Feaoeq%2Fmtjep%2F%40aqkgt%5DRcnfoo%2Fknfez.jtol');">
       <img src="https://th.bing.com/th/id/R.3cc7b68d78f953133c4eae9a97b874dd?rik=Qu5mbezd5qr32Q&pid=ImgRaw&r=0" alt="basket">
@@ -431,33 +443,47 @@ body {
     <a class="button" onclick="blank('https://sans.nyaasu.top/');">
       <img src="https://play-lh.googleusercontent.com/T08jAj6GRGQGPOw41mQrvM_bz0ZFbqtZVL8YMbLoAy-Qu6zmLwfV7BNrPCPpUX-ZWQ" alt="sans">
     </a>
-<a class="button" onclick="blank('https://run3unblocked.github.io/');">
-      <img src="https://th.bing.com/th/id/OIP.OHAlORUEIX0Bp7vCo4CrjgAAAA?w=170&h=170&rs=1&pid=ImgDetMain" alt="run 3 ">
+    <a class="button" onclick="blank('https://lekug.github.io/tn6pS9dCf37xAhkJv/index.html');">
+      <img src="https://i.imgur.com/Nkgt66T.jpeg" alt="run 3">
     </a>
-<a class="button" onclick="blank('https://cloudfuntime.vercel.app/clients.html');">
-      <img src="https://th.bing.com/th/id/R.281a0334856a6d8e79f15aefa0ef81cf?rik=eigkhhOk15rklw&pid=ImgRaw&r=0" alt="run 3 ">
+    <a class="button" onclick="blank('https://cloudfuntime.vercel.app/clients.html');">
+      <img src="https://th.bing.com/th/id/R.281a0334856a6d8e79f15aefa0ef81cf?rik=eigkhhOk15rklw&pid=ImgRaw&r=0" alt="mc">
     </a>
-<a class="button" onclick="blank('https://www.hoodamath.com/mobile/games/duck-life-4/game.html?nocheckorient=1');">
-      <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/bc/3e/d1/bc3ed129-14a6-cd24-d547-b7119530ad08/AppIcon-0-0-1x_U007emarketing-0-7-0-85-220.png/512x512bb.jpg" alt="run 3 ">
+    <a class="button" onclick="blank('https://www.hoodamath.com/mobile/games/duck-life-4/game.html?nocheckorient=1');">
+      <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/bc/3e/d1/bc3ed129-14a6-cd24-d547-b7119530ad08/AppIcon-0-0-1x_U007emarketing-0-7-0-85-220.png/512x512bb.jpg" alt="duck">
     </a>
-<a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/cookie-clicker/');">
-      <img src="https://th.bing.com/th/id/R.98626247c0801762e4eb11dc481b23b4?rik=GUiQy2FMBKcPHA&pid=ImgRaw&r=0" alt="cookie clicker ">
+    <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/cookie-clicker/');">
+      <img src="https://th.bing.com/th/id/R.98626247c0801762e4eb11dc481b23b4?rik=GUiQy2FMBKcPHA&pid=ImgRaw&r=0" alt="cookie clicker">
     </a>
-<a class="button" onclick="blank('https://burgerbounty.github.io/s4/getaway-shootout/');">
-      <img src="https://th.bing.com/th/id/OIP.PPom7Z99XBMeyX9oBa_LRQAAAA?rs=1&pid=ImgDetMain" alt="bad icecream">
+    <a class="button" onclick="blank('https://burgerbounty.github.io/s4/getaway-shootout/');">
+      <img src="https://th.bing.com/th/id/OIP.PPom7Z99XBMeyX9oBa_LRQAAAA?rs=1&pid=ImgDetMain" alt="getaway">
     </a>
-<a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/basketbros-io/index.html');">
-      <img src="https://somuchmath.global.ssl.fastly.net/projects/basketbros-io/thumb.jpg" alt="bad icecream">
+    <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/basketbros-io/index.html');">
+      <img src="https://somuchmath.global.ssl.fastly.net/projects/basketbros-io/thumb.jpg" alt="basketbro">
     </a>
-<a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-lwncrqylc%2Csoaptdonom.qpccg%2Fcsqevs-fmnvs-ggooevr%7B-faqh-');">
-      <img src="https://th.bing.com/th/id/R.2a527448abbb085f6c89793cfb5f65f5?rik=A7ss82CSOJPrkg&riu=http%3a%2f%2fvignette2.wikia.nocookie.net%2fgeometry-dash%2fimages%2f9%2f90%2fGeometryDash.png%2frevision%2flatest%3fcb%3d20160224042843&ehk=Hvk2rFdCmF08iQinZYieMsLbvo4NDNdKYic8xB6GqZE%3d&risl=&pid=ImgRaw&r=0" alt="bad icecream">
+    <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-lwncrqylc%2Csoaptdonom.qpccg%2Fcsqevs-fmnvs-ggooevr%7B-faqh-');">
+      <img src="https://th.bing.com/th/id/R.2a527448abbb085f6c89793cfb5f65f5?rik=A7ss82CSOJPrkg&riu=http%3a%2f%2fvignette2.wikia.nocookie.net%2fgeometry-dash%2fimages%2f9%2f90%2fGeometryDash.png%2frevision%2flatest%3fcb%3d20160224042843&ehk=Hvk2rFdCmF08iQinZYieMsLbvo4NDNdKYic8xB6GqZE%3d&risl=&pid=ImgRaw&r=0" alt="gd">
     </a>
-<a class="button" onclick="blank('https://motox3monline.github.io/file/');">
-      <img src="https://somuchmath.global.ssl.fastly.net/projects/motox3m/splash.jpg" alt="bad icecream">
+    <a class="button" onclick="blank('https://yexex2.github.io/motox3m/index.html');">
+      <img src="https://somuchmath.global.ssl.fastly.net/projects/motox3m/splash.jpg" alt="motox3">
     </a>
-<a class="button" onclick="blank('https://levelsharesquare.com/html5/yoshisfabricationstation/');">
-      <img src="https://somuchmath.global.ssl.fastly.net/projects/yoshifabrication/icons/icon-512.png">
+    <a class="button" onclick="blank('https://theregoestokyo0.github.io/S213/');">
+      <img src="https://i.imgur.com/JryDjwP.png" alt="game10">
     </a>
+    <a class="button" onclick="blank('https://levelsharesquare.com/html5/yoshisfabricationstation/');">
+      <img src="https://somuchmath.global.ssl.fastly.net/projects/yoshifabrication/icons/icon-512.png" alt="yfs">
+    </a>
+    <a class="button" onclick="blank('https://landgreen.github.io/n-gon/');">
+      <img src="https://i.imgur.com/LsjeY4q.png" alt="game7">
+    </a>
+  </div>
+
+  <!-- Third Row of Buttons -->
+  <div class="button-container">
+  </div>
+</body>
+</html>
+
 
 
   <script>
