--- a/index.html
+++ b/index.html
@@ -366,7 +366,7 @@
 
   <!-- First Row of Buttons -->
   <div class="button-container">
-    <a class="button" onclick="blank('https://sussygamedeveloper.github.io/FNAF1/');">
+    <a class="button" onclick="blank('https://xn--l8jyc6av9xzc.jodymaroni.com/compiled/fnaf1/index.html');">
       <img src="https://th.bing.com/th/id/OIP.YKYIiqVU1Tp17waNwI8uVAAAAA?rs=1&pid=ImgDetMain" alt="fnaf">
     </a>
     <a class="button" onclick="blank('https://xn--l8jyc6av9xzc.jodymaroni.com/compiled/fnaf2/');">
