--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quantum</title>
+  <title>sigma</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -400,17 +400,20 @@
     <a class="button" onclick="blank('https://xn--l8jyc6av9xzc.jodymaroni.com/compiled/monkey-mart/');">
       <img src="https://th.bing.com/th/id/OIP.R6QV49uV3NDGj2yeVJwXGAAAAA?rs=1&pid=ImgDetMain" alt="monke">
     </a>
-    <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/fnaw/index.html');">
+    <a class="button" onclick="blank('https://eldritchdev2.github.io/Website-v2/fnaw/index.html');">
       <img src="https://somuchmath.global.ssl.fastly.net/projects/fnaw/splash.png" alt="game9">
     </a>
     <a class="button" onclick="blank('https://sonic-mania-web2.vercel.app/RSDKv5.html');">
       <img src="https://th.bing.com/th/id/R.2b10f121743af7b35a09743345649982?rik=8rgBTShBw3J2Mw&pid=ImgRaw&r=" alt="sonic3">
     </a>
-    <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/jetpack-joyride/splash.jpg');">
+    <a class="button" onclick="blank('https://astrogames06.github.io/games/JetpackJoyride/index.html');">
       <img src="https://somuchmath.global.ssl.fastly.net/projects/jetpack-joyride/splash.jpg" alt="jetpack">
     </a>
  <a class="button" onclick="blank('https://shadowgmes.github.io/gfiles/ballistic-chickens/');">
       <img src="https://somuchmath.global.ssl.fastly.net/projects/ballistic-chickens/logo.png" alt="chicken">
+    </a>
+ <a class="button" onclick="blank('https://xn--7zc.vercel.app/english/src/tag');">
+      <img src="https://i.imgur.com/BHlfDJ6.png" alt="chicken">
     </a>
    <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-wuw%2Cgmoelg.ao%2Cui%2F');">
       <img src="https://www.shareicon.net/data/512x512/2016/07/10/119930_google_512x512.png" alt="google">
@@ -437,8 +440,8 @@
     <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-sklgnvsraaeoapile%2Ccmm-');">
       <img src="https://th.bing.com/th/id/OIP.yp_k2YKOplhIXyEvRJEOJwHaHa?rs=1&pid=ImgDetMain" alt="doom">
     </a>
-    <a class="button" onclick="blank('https://html-classic.itch.zone/html/2876359-985120/index.html');">
-      <img src="https://th.bing.com/th/id/R.7936acf97d736dbfd5613c09a3f6acfa?rik=KxpihNWAM93B5w&pid=ImgRaw&r=0" alt="fnf">
+    <a class="button" onclick="blank('https://gladihoppers.github.io/file/');">
+      <img src="https://img.poki.com/cdn-cgi/image/quality=78,width=600,height=600,fit=cover,f=auto/https://img.poki.com/c4158282ee354873ed29da8852457eb5.png" alt="fnf">
     </a>
     <a class="button" onclick="blank('https://sans.nyaasu.top/');">
       <img src="https://play-lh.googleusercontent.com/T08jAj6GRGQGPOw41mQrvM_bz0ZFbqtZVL8YMbLoAy-Qu6zmLwfV7BNrPCPpUX-ZWQ" alt="sans">
@@ -472,6 +475,9 @@
     </a>
     <a class="button" onclick="blank('https://levelsharesquare.com/html5/yoshisfabricationstation/');">
       <img src="https://somuchmath.global.ssl.fastly.net/projects/yoshifabrication/icons/icon-512.png" alt="yfs">
+    </a>
+    <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/DogeMiner/index.html');">
+      <img src="https://th.bing.com/th/id/R.21ae5633a6bcf2602d87fdba92f7a451?rik=etVT%2bGrPJ9GysA&riu=http%3a%2f%2fszeged.github.io%2fservo%2fimages%2fdoge_worker.png&ehk=sjXDDZHiwIrYqECdn9oU7dRw2eKeVEdrU%2bTOH%2f0YgOY%3d&risl=&pid=ImgRaw&r=0" alt="yfs">
     </a>
     <a class="button" onclick="blank('https://landgreen.github.io/n-gon/');">
       <img src="https://i.imgur.com/LsjeY4q.png" alt="game7">
