--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>sigma</title>
+  <title>Quantum</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -434,14 +434,14 @@
     <a class="button" onclick="blank('https://projects.sappharad.com/s3air_ios/20240202_beta/sonic3air_web.html');">
       <img src="https://m.gjcdn.net/game-screenshot/400/16208740-hcqnh2rx-v4.jpg" alt="mania">
     </a>
-    <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-fklgs%2Ctuorlcygreaoeq.mre%2Fdineq%2Feaoeq%2Fmtjep%2F%40aqkgt%5DRcnfoo%2Fknfez.jtol');">
+    <a class="button" onclick="blank('https://www.twoplayergames.org/embed/basket-random');">
       <img src="https://th.bing.com/th/id/R.3cc7b68d78f953133c4eae9a97b874dd?rik=Qu5mbezd5qr32Q&pid=ImgRaw&r=0" alt="basket">
     </a>
     <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-sklgnvsraaeoapile%2Ccmm-');">
       <img src="https://th.bing.com/th/id/OIP.yp_k2YKOplhIXyEvRJEOJwHaHa?rs=1&pid=ImgDetMain" alt="doom">
     </a>
-    <a class="button" onclick="blank('https://gladihoppers.github.io/file/');">
-      <img src="https://img.poki.com/cdn-cgi/image/quality=78,width=600,height=600,fit=cover,f=auto/https://img.poki.com/c4158282ee354873ed29da8852457eb5.png" alt="fnf">
+    <a class="button" onclick="blank('https://bonbang.github.io/store99/gladihoppers/');">
+      <img src="https://th.bing.com/th/id/OIP.Ou7_x0DT5SP8InmVfgoWkgHaHa?rs=1&pid=ImgDetMain" alt="fnf">
     </a>
     <a class="button" onclick="blank('https://sans.nyaasu.top/');">
       <img src="https://play-lh.googleusercontent.com/T08jAj6GRGQGPOw41mQrvM_bz0ZFbqtZVL8YMbLoAy-Qu6zmLwfV7BNrPCPpUX-ZWQ" alt="sans">
