--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quantum</title>
+  <title>🤡</title>
   <style>
     body {
       font-family: Arial, sans-serif;
