--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🤡</title>
+  <title>Quantum</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -342,7 +342,7 @@
 
     .button img {
       display: block;
-      width: 36px;
+      width: 32.5px;
       height: auto;
     }
 
@@ -372,9 +372,8 @@
     <a class="button" onclick="blank('https://xn--l8jyc6av9xzc.jodymaroni.com/compiled/fnaf2/');">
       <img src="https://i.imgur.com/dmcIh5N.jpg" alt="fnaf2">
     </a>
-    <a class="button" 
-    <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/slope/index.html');">
-      <img src="https://th.bing.com/th/id/R.8612001a80ea5f6720b1a1c11687af88?rik=WyQ6HIc0e6vkSg&pid=ImgRaw&r=0" alt="slope">
+    <a class="button" onclick="blank('https://db.scmtstore.com/semag/pizzatower/index.html');">
+      <img src="https://db.scmtstore.com/semag/pizzatower/images/menubg.png" alt="pizzatower">
     </a>
     <a class="button" onclick="blank('https://newbody.vercel.app/Mario_64-OFFLINE.html');">
       <img src="https://th.bing.com/th/id/OIP.BvriPJra1wbseYngRo0dpwAAAA?rs=1&pid=ImgDetMain" alt="sm64">
@@ -382,7 +381,7 @@
     <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/retro-bowl/index.html');">
       <img src="https://th.bing.com/th/id/R.9d0bdbd48b96dc29e6dc015082209462?rik=XlC3BCr1QNkK4w&pid=ImgRaw&r=0" alt="retro">
     </a>
-    <a class="button" onclick="blank('https://ovo-alpha.vercel.app/versions/1.4.4b/index.html');">
+    <a class="button" onclick="blank('https://ovo-alpha.vercel.app/');">
       <img src="https://arjun99ab.github.io/ovo/assets/img/home-icon.png" alt="ovo">
     </a>
     <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/btts/index.html');">
@@ -412,7 +411,7 @@
  <a class="button" onclick="blank('https://shadowgmes.github.io/gfiles/ballistic-chickens/');">
       <img src="https://somuchmath.global.ssl.fastly.net/projects/ballistic-chickens/logo.png" alt="chicken">
     </a>
- <a class="button" onclick="blank('https://xn--7zc.vercel.app/english/src/tag');">
+ <a class="button" onclick="blank('https://xn--7zc.vercel.app/english/src/tag/');">
       <img src="https://i.imgur.com/BHlfDJ6.png" alt="chicken">
     </a>
    <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-wuw%2Cgmoelg.ao%2Cui%2F');">
@@ -434,13 +433,13 @@
     <a class="button" onclick="blank('https://projects.sappharad.com/s3air_ios/20240202_beta/sonic3air_web.html');">
       <img src="https://m.gjcdn.net/game-screenshot/400/16208740-hcqnh2rx-v4.jpg" alt="mania">
     </a>
-    <a class="button" onclick="blank('https://www.twoplayergames.org/embed/basket-random');">
+    <a class="button" onclick="blank('https://db.scmtstore.com/semag/basketrandom/index.html');">
       <img src="https://th.bing.com/th/id/R.3cc7b68d78f953133c4eae9a97b874dd?rik=Qu5mbezd5qr32Q&pid=ImgRaw&r=0" alt="basket">
     </a>
     <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-sklgnvsraaeoapile%2Ccmm-');">
       <img src="https://th.bing.com/th/id/OIP.yp_k2YKOplhIXyEvRJEOJwHaHa?rs=1&pid=ImgDetMain" alt="doom">
     </a>
-    <a class="button" onclick="blank('https://bonbang.github.io/store99/gladihoppers/');">
+    <a class="button" onclick="blank('https://m.igroutka.ru/g-1/113/Gladihoppers/');">
       <img src="https://th.bing.com/th/id/OIP.Ou7_x0DT5SP8InmVfgoWkgHaHa?rs=1&pid=ImgDetMain" alt="fnf">
     </a>
     <a class="button" onclick="blank('https://sans.nyaasu.top/');">
@@ -464,8 +463,8 @@
     <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/basketbros-io/index.html');">
       <img src="https://somuchmath.global.ssl.fastly.net/projects/basketbros-io/thumb.jpg" alt="basketbro">
     </a>
-    <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-lwncrqylc%2Csoaptdonom.qpccg%2Fcsqevs-fmnvs-ggooevr%7B-faqh-');">
-      <img src="https://th.bing.com/th/id/R.2a527448abbb085f6c89793cfb5f65f5?rik=A7ss82CSOJPrkg&riu=http%3a%2f%2fvignette2.wikia.nocookie.net%2fgeometry-dash%2fimages%2f9%2f90%2fGeometryDash.png%2frevision%2flatest%3fcb%3d20160224042843&ehk=Hvk2rFdCmF08iQinZYieMsLbvo4NDNdKYic8xB6GqZE%3d&risl=&pid=ImgRaw&r=0" alt="gd">
+    <a class="button" onclick="blank('https://db.scmtstore.com/semag/gdlite/index.html');">
+      <img src=https://th.bing.com/th/id/OIP.s4d4VcKTFV3tvJZ5nVJzOwHaHa?w=500&h=500&rs=1&pid=ImgDetMain" alt="gd">
     </a>
     <a class="button" onclick="blank('https://yexex2.github.io/motox3m/index.html');">
       <img src="https://somuchmath.global.ssl.fastly.net/projects/motox3m/splash.jpg" alt="motox3">
