--- a/index.html
+++ b/index.html
@@ -376,12 +376,12 @@
       <img src="https://db.scmtstore.com/semag/pizzatower/images/menubg.png" alt="pizzatower">
     </a>
     <a class="button" onclick="blank('https://newbody.vercel.app/Mario_64-OFFLINE.html');">
-      <img src="https://th.bing.com/th/id/OIP.BvriPJra1wbseYngRo0dpwAAAA?rs=1&pid=ImgDetMain" alt="sm64">
+      <img src="https://i.imgur.com/NVI3G6I.png" alt="sm64">
     </a>
     <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/retro-bowl/index.html');">
       <img src="https://th.bing.com/th/id/R.9d0bdbd48b96dc29e6dc015082209462?rik=XlC3BCr1QNkK4w&pid=ImgRaw&r=0" alt="retro">
     </a>
-    <a class="button" onclick="blank('https://ovo-alpha.vercel.app/');">
+    <a class="button" onclick="blank('https://ovo-alpha.vercel.app/versions/1.4.4b/index.html');">
       <img src="https://arjun99ab.github.io/ovo/assets/img/home-icon.png" alt="ovo">
     </a>
     <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/btts/index.html');">
@@ -394,7 +394,7 @@
       <img src="https://th.bing.com/th/id/OIP.uN2kUJQ7lL0adPDQGxlf-QAAAA?w=420&h=420&rs=1&pid=ImgDetMain" alt="fnaf movie">
     </a>
     <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/bad-ice-cream/index.html');">
-      <img src="https://i.imgur.com/j2f0ABZ.png">
+      <img src="https://i.imgur.com/qzjN8DP.png">
     </a>
     <a class="button" onclick="blank('https://xn--l8jyc6av9xzc.jodymaroni.com/compiled/monkey-mart/');">
       <img src="https://th.bing.com/th/id/OIP.R6QV49uV3NDGj2yeVJwXGAAAAA?rs=1&pid=ImgDetMain" alt="monke">
@@ -405,7 +405,7 @@
     <a class="button" onclick="blank('https://sonic-mania-web2.vercel.app/RSDKv5.html');">
       <img src="https://th.bing.com/th/id/R.2b10f121743af7b35a09743345649982?rik=8rgBTShBw3J2Mw&pid=ImgRaw&r=" alt="sonic3">
     </a>
-    <a class="button" onclick="blank('https://astrogames06.github.io/games/JetpackJoyride/index.html');">
+    <a class="button" onclick="blank('https://abinbins.github.io/a7/jetpack-joyride/');">
       <img src="https://somuchmath.global.ssl.fastly.net/projects/jetpack-joyride/splash.jpg" alt="jetpack">
     </a>
  <a class="button" onclick="blank('https://shadowgmes.github.io/gfiles/ballistic-chickens/');">
@@ -418,7 +418,7 @@
       <img src="https://www.shareicon.net/data/512x512/2016/07/10/119930_google_512x512.png" alt="google">
     </a>
 <a class="button" onclick="blank('https://levelsharesquare.com/html5/supermarioconstruct/');">
-      <img src="https://somuchmath.global.ssl.fastly.net/projects/supermarioconstruct/media/icons/icon-128.png" alt="smc">
+      <img src="https://i.imgur.com/5Fz5C1u.png" alt="smc">
     </a>
 <a class="button" onclick="blank('https://html-classic.itch.zone/html/2876359-985120/index.html');">
       <img src="https://th.bing.com/th/id/R.7936acf97d736dbfd5613c09a3f6acfa?rik=KxpihNWAM93B5w&pid=ImgRaw&r=0" alt="fnf">
@@ -428,7 +428,7 @@
   <!-- Second Row of Buttons -->
   <div class="button-container">
     <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-bkg%2Cfklgdktahqtwfd.oe-b13-XIhRsuoERFmZSldWgAf%2Cmr4');">
-      <img src="https://images2.fanpop.com/images/photos/7000000/Spongebob-Icon-spongebob-squarepants-7039739-100-100.jpg" alt="sponge">
+      <img src="https://i.imgur.com/686iy7V.jpg" alt="sponge">
     </a>
     <a class="button" onclick="blank('https://projects.sappharad.com/s3air_ios/20240202_beta/sonic3air_web.html');">
       <img src="https://m.gjcdn.net/game-screenshot/400/16208740-hcqnh2rx-v4.jpg" alt="mania">
@@ -437,13 +437,13 @@
       <img src="https://th.bing.com/th/id/R.3cc7b68d78f953133c4eae9a97b874dd?rik=Qu5mbezd5qr32Q&pid=ImgRaw&r=0" alt="basket">
     </a>
     <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-sklgnvsraaeoapile%2Ccmm-');">
-      <img src="https://th.bing.com/th/id/OIP.yp_k2YKOplhIXyEvRJEOJwHaHa?rs=1&pid=ImgDetMain" alt="doom">
+      <img src="https://i.imgur.com/u8Xyvmo.png" alt="doom">
     </a>
     <a class="button" onclick="blank('https://m.igroutka.ru/g-1/113/Gladihoppers/');">
       <img src="https://th.bing.com/th/id/OIP.Ou7_x0DT5SP8InmVfgoWkgHaHa?rs=1&pid=ImgDetMain" alt="fnf">
     </a>
     <a class="button" onclick="blank('https://sans.nyaasu.top/');">
-      <img src="https://play-lh.googleusercontent.com/T08jAj6GRGQGPOw41mQrvM_bz0ZFbqtZVL8YMbLoAy-Qu6zmLwfV7BNrPCPpUX-ZWQ" alt="sans">
+      <img src="https://i.imgur.com/nDDdEmR.png" alt="sans">
     </a>
     <a class="button" onclick="blank('https://lekug.github.io/tn6pS9dCf37xAhkJv/index.html');">
       <img src="https://i.imgur.com/Nkgt66T.jpeg" alt="run 3">
@@ -464,7 +464,7 @@
       <img src="https://somuchmath.global.ssl.fastly.net/projects/basketbros-io/thumb.jpg" alt="basketbro">
     </a>
     <a class="button" onclick="blank('https://db.scmtstore.com/semag/gdlite/index.html');">
-      <img src=https://th.bing.com/th/id/OIP.s4d4VcKTFV3tvJZ5nVJzOwHaHa?w=500&h=500&rs=1&pid=ImgDetMain" alt="gd">
+      <img src="https://i.imgur.com/4qngYqD.png" alt="gd">
     </a>
     <a class="button" onclick="blank('https://yexex2.github.io/motox3m/index.html');">
       <img src="https://somuchmath.global.ssl.fastly.net/projects/motox3m/splash.jpg" alt="motox3">
@@ -499,7 +499,7 @@
       "I Love 🧽",
       "Hi 🅱ryce",
       "Me When Im: ☺",
-      "OmegaLul"
+      "Dinner With Jay-Z Or $500,000?"
     ];
 
     // Function to set random placeholder text
