--- a/index.html
+++ b/index.html
@@ -420,10 +420,11 @@
       position: relative;
       top: -59px;
     }
+
     .button {
       display: inline-block;
       overflow: hidden;
-      border-radius: 10px;
+      border-radius: 10px; /* Rounded corners for all buttons */
       cursor: pointer;
       transition: all 0.3s ease;
       margin: 10px;
@@ -431,13 +432,39 @@
 
     .button img {
       display: block;
-      width: 32.5px;
+      width: 31.25px;
       height: auto;
     }
 
     .button:hover {
       transform: scale(1.1);
     }
+
+    .sigma-container {
+      position: relative;
+      top: -59px;
+    }
+
+    .sigma {
+      display: inline-block;
+      overflow: hidden;
+      border-radius: 10px; /* Rounded corners for all buttons */
+      cursor: pointer;
+      transition: all 0.3s ease;
+      margin: 10px;
+    }
+
+    .sigma img {
+      display: block;
+      width: 35.2px;
+      height: auto;
+    }
+
+    .sigma:hover {
+      transform: scale(1.1);
+    }
+
+
   </style>
 </head>
 <body>
@@ -474,16 +501,16 @@
       <img src="https://arjun99ab.github.io/ovo/assets/img/home-icon.png" alt="ovo">
     </a>
     <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/btts/index.html');">
-      <img src="https://i.imgur.com/WUKTKmw.jpeg" alt="btts">
+      <img src="https://i.imgur.com/6HIW1yW.png" alt="btts">
     </a>
     <a class="button" onclick="blank('https://a6936-19375562.cluster7.canvas-user-content.com/courses/6936~1010708/files/6936~19375562/course%20files/vfcd/index.html?context_id=6936~1010708context_type=Course&download=1&id=69360000019375562&inline=1');">
-      <img src="https://th.bing.com/th/id/OIP.wTyDM9r3GsSjywIfZj2EKgAAAA?w=300&h=300&rs=1&pid=ImgDetMain" alt="subway">
+      <img src="https://somuchmath.global.ssl.fastly.net/projects/subway-surfers-ny/NewYorkIcon.png" alt="subway">
     </a>
     <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-bkg%2Cfklgdktahqtwfd.oe-b12-YinNKDfuakRgIjQVg%60f%2Cmr4');">
       <img src="https://th.bing.com/th/id/OIP.uN2kUJQ7lL0adPDQGxlf-QAAAA?w=420&h=420&rs=1&pid=ImgDetMain" alt="fnaf movie">
     </a>
-    <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/bad-ice-cream/index.html');">
-      <img src="https://i.imgur.com/qzjN8DP.png">
+    <a class="sigma" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/bad-ice-cream/index.html');">
+      <img src="https://i.imgur.com/kJ6gvTp.png">
     </a>
     <a class="button" onclick="blank('https://xn--l8jyc6av9xzc.jodymaroni.com/compiled/monkey-mart/');">
       <img src="https://th.bing.com/th/id/OIP.R6QV49uV3NDGj2yeVJwXGAAAAA?rs=1&pid=ImgDetMain" alt="monke">
@@ -491,8 +518,8 @@
     <a class="button" onclick="blank('https://eldritchdev2.github.io/Website-v2/fnaw/index.html');">
       <img src="https://somuchmath.global.ssl.fastly.net/projects/fnaw/splash.png" alt="game9">
     </a>
-    <a class="button" onclick="blank('https://sonic-mania-web2.vercel.app/RSDKv5.html');">
-      <img src="https://th.bing.com/th/id/R.2b10f121743af7b35a09743345649982?rik=8rgBTShBw3J2Mw&pid=ImgRaw&r=" alt="sonic3">
+    <a class="sigma" onclick="blank('https://sonic-mania-web2.vercel.app/RSDKv5.html');">
+      <img src="https://i.imgur.com/HRVGltW.png" alt="sonic3">
     </a>
     <a class="button" onclick="blank('https://abinbins.github.io/a7/jetpack-joyride/');">
       <img src="https://somuchmath.global.ssl.fastly.net/projects/jetpack-joyride/splash.jpg" alt="jetpack">
@@ -520,7 +547,7 @@
       <img src="https://i.imgur.com/686iy7V.jpg" alt="sponge">
     </a>
     <a class="button" onclick="blank('https://projects.sappharad.com/s3air_ios/20240202_beta/sonic3air_web.html');">
-      <img src="https://m.gjcdn.net/game-screenshot/400/16208740-hcqnh2rx-v4.jpg" alt="mania">
+      <img src="https://i.imgur.com/HyAw7fn.png" alt="mania">
     </a>
     <a class="button" onclick="blank('https://db.scmtstore.com/semag/basketrandom/index.html');">
       <img src="https://th.bing.com/th/id/R.3cc7b68d78f953133c4eae9a97b874dd?rik=Qu5mbezd5qr32Q&pid=ImgRaw&r=0" alt="basket">
@@ -528,17 +555,17 @@
     <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-sklgnvsraaeoapile%2Ccmm-');">
       <img src="https://i.imgur.com/u8Xyvmo.png" alt="doom">
     </a>
-    <a class="button" onclick="blank('https://m.igroutka.ru/g-1/113/Gladihoppers/');">
+    <a class="button" onclick="blank('https://classroomjq.github.io/gladihoppers/');">
       <img src="https://th.bing.com/th/id/OIP.Ou7_x0DT5SP8InmVfgoWkgHaHa?rs=1&pid=ImgDetMain" alt="fnf">
     </a>
     <a class="button" onclick="blank('https://sans.nyaasu.top/');">
       <img src="https://i.imgur.com/nDDdEmR.png" alt="sans">
     </a>
-    <a class="button" onclick="blank('https://lekug.github.io/tn6pS9dCf37xAhkJv/index.html');">
-      <img src="https://i.imgur.com/Nkgt66T.jpeg" alt="run 3">
+    <a class="button" onclick="blank('https://mac-web.github.io/macvg/projects/backrooms-2d/game.html');">
+      <img src="https://mac-web.github.io/macvg/projects/backrooms-2d/Backrooms2D.png" alt="run 3">
     </a>
     <a class="button" onclick="blank('https://cloudfuntime.vercel.app/clients.html');">
-      <img src="https://th.bing.com/th/id/R.281a0334856a6d8e79f15aefa0ef81cf?rik=eigkhhOk15rklw&pid=ImgRaw&r=0" alt="mc">
+      <img src="https://i.imgur.com/NTjcDnT.png" alt="mc">
     </a>
     <a class="button" onclick="blank('https://www.hoodamath.com/mobile/games/duck-life-4/game.html?nocheckorient=1');">
       <img src="https://is1-ssl.mzstatic.com/image/thumb/Purple126/v4/bc/3e/d1/bc3ed129-14a6-cd24-d547-b7119530ad08/AppIcon-0-0-1x_U007emarketing-0-7-0-85-220.png/512x512bb.jpg" alt="duck">
@@ -555,8 +582,8 @@
     <a class="button" onclick="blank('https://db.scmtstore.com/semag/gdlite/index.html');">
       <img src="https://i.imgur.com/4qngYqD.png" alt="gd">
     </a>
-    <a class="button" onclick="blank('https://yexex2.github.io/motox3m/index.html');">
-      <img src="https://somuchmath.global.ssl.fastly.net/projects/motox3m/splash.jpg" alt="motox3">
+    <a class="button" onclick="blank('https://www.netquake.io/');">
+      <img src="https://i.imgur.com/d6Ut7U0.gif" alt="quake">
     </a>
     <a class="button" onclick="blank('https://theregoestokyo0.github.io/S213/');">
       <img src="https://i.imgur.com/JryDjwP.png" alt="game10">
