--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
     <!-- Second Button -->
     <button id="minecraftButton" class="kickassButton">
-        <img src="https://luphoria.com/favicon.ico" alt="Minecraft Button">
+        <img src="https://i.imgur.com/adPugM6.png" alt="Minecraft Button">
     </button>
 
     <!-- Third Button -->
