--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@
 </html>
 
 
-
 <!-- Start of CuterCounter Code -->
 <a href="https://www.cutercounter.com/" target="_blank"><img src="https://www.cutercounter.com/hits.php?id=hxpoaax&nd=5&style=2" border="0" alt="hit counter"></a>
 <!-- End of CuterCounter Code -->
@@ -424,7 +423,7 @@
     .button {
       display: inline-block;
       overflow: hidden;
-      border-radius: 10px; /* Rounded corners for all buttons */
+      border-radius: 6.5px; /* Rounded corners for all buttons */
       cursor: pointer;
       transition: all 0.3s ease;
       margin: 10px;
@@ -456,7 +455,7 @@
 
     .sigma img {
       display: block;
-      width: 35.2px;
+      width: 35.1px;
       height: auto;
     }
 
@@ -503,14 +502,14 @@
     <a class="button" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/btts/index.html');">
       <img src="https://i.imgur.com/6HIW1yW.png" alt="btts">
     </a>
-    <a class="button" onclick="blank('https://a6936-19375562.cluster7.canvas-user-content.com/courses/6936~1010708/files/6936~19375562/course%20files/vfcd/index.html?context_id=6936~1010708context_type=Course&download=1&id=69360000019375562&inline=1');">
+    <a class="button " onclick="blank('https://a6936-19375562.cluster7.canvas-user-content.com/courses/6936~1010708/files/6936~19375562/course%20files/vfcd/index.html?context_id=6936~1010708context_type=Course&download=1&id=69360000019375562&inline=1');">
       <img src="https://somuchmath.global.ssl.fastly.net/projects/subway-surfers-ny/NewYorkIcon.png" alt="subway">
     </a>
     <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-bkg%2Cfklgdktahqtwfd.oe-b12-YinNKDfuakRgIjQVg%60f%2Cmr4');">
       <img src="https://th.bing.com/th/id/OIP.uN2kUJQ7lL0adPDQGxlf-QAAAA?w=420&h=420&rs=1&pid=ImgDetMain" alt="fnaf movie">
     </a>
     <a class="sigma" onclick="blank('https://somuchmath.global.ssl.fastly.net/projects/bad-ice-cream/index.html');">
-      <img src="https://i.imgur.com/kJ6gvTp.png">
+      <img src="https://i.imgur.com/rp68OdI.png">
     </a>
     <a class="button" onclick="blank('https://xn--l8jyc6av9xzc.jodymaroni.com/compiled/monkey-mart/');">
       <img src="https://th.bing.com/th/id/OIP.R6QV49uV3NDGj2yeVJwXGAAAAA?rs=1&pid=ImgDetMain" alt="monke">
@@ -559,7 +558,7 @@
       <img src="https://th.bing.com/th/id/OIP.Ou7_x0DT5SP8InmVfgoWkgHaHa?rs=1&pid=ImgDetMain" alt="fnf">
     </a>
     <a class="button" onclick="blank('https://sans.nyaasu.top/');">
-      <img src="https://i.imgur.com/nDDdEmR.png" alt="sans">
+      <img src="https://i.imgur.com/A0nDeBI.png" alt="sans">
     </a>
     <a class="button" onclick="blank('https://mac-web.github.io/macvg/projects/backrooms-2d/game.html');">
       <img src="https://mac-web.github.io/macvg/projects/backrooms-2d/Backrooms2D.png" alt="run 3">
@@ -586,7 +585,7 @@
       <img src="https://i.imgur.com/d6Ut7U0.gif" alt="quake">
     </a>
     <a class="button" onclick="blank('https://theregoestokyo0.github.io/S213/');">
-      <img src="https://i.imgur.com/JryDjwP.png" alt="game10">
+      <img src="https://i.imgur.com/cBEv9ZG.png" alt="game10">
     </a>
     <a class="button" onclick="blank('https://levelsharesquare.com/html5/yoshisfabricationstation/');">
       <img src="https://somuchmath.global.ssl.fastly.net/projects/yoshifabrication/icons/icon-512.png" alt="yfs">
