--- a/index.html
+++ b/index.html
@@ -1,6 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>bro what</title>
+<script>
+  window.onload = function() {
+    const titles = ["what the skid", "bro quantum is soo bad", "sponge > zyte"];
+    let currentIndex = 0;
+
+    setInterval(() => {
+      document.title = titles[currentIndex];
+      currentIndex = (currentIndex + 1) % titles.length;
+    }, 1000);
+  };
+</script>
+</head>
+<body>
+
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
@@ -303,7 +324,6 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quantum</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -463,6 +483,12 @@
       transform: scale(1.1);
     }
 
+.button,
+.sigma {
+    outline: none;
+    user-select: none;
+}
+
 
   </style>
 </head>
@@ -529,7 +555,7 @@
  <a class="button" onclick="blank('https://xn--7zc.vercel.app/english/src/tag/');">
       <img src="https://i.imgur.com/BHlfDJ6.png" alt="chicken">
     </a>
-   <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-wuw%2Cgmoelg.ao%2Cui%2F');">
+   <a class="button" onclick="blank('https://xn--7zc.vercel.app/history/src/google');">
       <img src="https://www.shareicon.net/data/512x512/2016/07/10/119930_google_512x512.png" alt="google">
     </a>
 <a class="button" onclick="blank('https://levelsharesquare.com/html5/supermarioconstruct/');">
@@ -551,7 +577,7 @@
     <a class="button" onclick="blank('https://db.scmtstore.com/semag/basketrandom/index.html');">
       <img src="https://th.bing.com/th/id/R.3cc7b68d78f953133c4eae9a97b874dd?rik=Qu5mbezd5qr32Q&pid=ImgRaw&r=0" alt="basket">
     </a>
-    <a class="button" onclick="blank('https://owen.raandom.info/uv/service/hvtrs8%2F-sklgnvsraaeoapile%2Ccmm-');">
+    <a class="button" onclick="blank('https://jmw-ub.pages.dev/static/jmwsw/hvtrs8%2F-sklgnvsraaeoapile%2Ccmm-');">
       <img src="https://i.imgur.com/u8Xyvmo.png" alt="doom">
     </a>
     <a class="button" onclick="blank('https://classroomjq.github.io/gladihoppers/');">
